# MiningUp

./: .gitignore  Background.cpp  Background.h  Buttons.cpp  Buttons.h  CMakeLists.txt  Camera.cpp  Camera.h  Entity.h  Game.cpp  Game.h  Gra.sln  Gra.vcxproj  Gra.vcxproj.filters  Lava.cpp  Lava.h  Menu.cpp  Menu.h  Myszka.cpp  Myszka.h  Positionable.h  README.md  TileMap.cpp  TileMap.h  UserInterface.cpp  UserInterface.h  main.cpp  player.cpp  player.h
saves/: players.txt  save1.txt
src/: Background.cpp  Background.h  Buttons.cpp  Buttons.h  Camera.cpp  Camera.h  Entity.h  Game.cpp  Game.h  Lava.cpp  Lava.h  Menu.cpp  Menu.h  Myszka.cpp  Myszka.h  Positionable.h  TileMap.cpp  TileMap.h  UserInterface.cpp  UserInterface.h  Walkable.h  player.cpp  player.h  templates.cpp
